crates/pg_syntax/tests/snapshots/postgres_regress/brin@48.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE INDEX brin_test_toast_idx ON brintest_3 USING brin (b, c);"
---
IndexStmt@0..65
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..32 "brin_test_toast_idx"
  Whitespace@32..33 " "
  On@33..35 "ON"
  Whitespace@35..36 " "
  RangeVar@36..46
    Ident@36..46 "brintest_3"
  Whitespace@46..47 " "
  Using@47..52 "USING"
  Whitespace@52..53 " "
  Ident@53..57 "brin"
  Whitespace@57..58 " "
  Ascii40@58..59 "("
  IndexElem@59..60
    Ident@59..60 "b"
  Ascii44@60..61 ","
  Whitespace@61..62 " "
  IndexElem@62..63
    Ident@62..63 "c"
  Ascii41@63..64 ")"
  Ascii59@64..65 ";"

