crates/pg_syntax/tests/snapshots/postgres_regress/brin@49.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: DELETE FROM brintest_3;
---
DeleteStmt@0..23
  DeleteP@0..6 "DELETE"
  Whitespace@6..7 " "
  From@7..11 "FROM"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "brintest_3"
  Ascii59@22..23 ";"

