crates/pg_syntax/tests/snapshots/postgres_regress/brin@5.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE brinopers (colname name, typ text,\n\top text[], value text[], matches int[],\n\tcheck (cardinality(op) = cardinality(value)),\n\tcheck (cardinality(op) = cardinality(matches)));"
---
CreateStmt@0..185
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..22
    Ident@13..22 "brinopers"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  ColumnDef@24..36
    Ident@24..31 "colname"
    Whitespace@31..32 " "
    TypeName@32..36
      NameP@32..36 "name"
  Ascii44@36..37 ","
  Whitespace@37..38 " "
  ColumnDef@38..46
    Ident@38..41 "typ"
    Whitespace@41..42 " "
    TypeName@42..46
      TextP@42..46 "text"
  Ascii44@46..47 ","
  Newline@47..48 "\n"
  Newline@48..49 "\t"
  ColumnDef@49..56
    Ident@49..51 "op"
    Whitespace@51..52 " "
    TypeName@52..56
      TextP@52..56 "text"
  Ascii91@56..57 "["
  Ascii93@57..58 "]"
  Ascii44@58..59 ","
  Whitespace@59..60 " "
  ColumnDef@60..70
    ValueP@60..65 "value"
    Whitespace@65..66 " "
    TypeName@66..70
      TextP@66..70 "text"
  Ascii91@70..71 "["
  Ascii93@71..72 "]"
  Ascii44@72..73 ","
  Whitespace@73..74 " "
  ColumnDef@74..85
    Ident@74..81 "matches"
    Whitespace@81..82 " "
    TypeName@82..85
      IntP@82..85 "int"
  Ascii91@85..86 "["
  Ascii93@86..87 "]"
  Ascii44@87..88 ","
  Newline@88..89 "\n"
  Newline@89..90 "\t"
  Constraint@90..132
    Check@90..95 "check"
    Whitespace@95..96 " "
    Ascii40@96..97 "("
    AExpr@97..132
      FuncCall@97..111
        Ident@97..108 "cardinality"
        Ascii40@108..109 "("
        ColumnRef@109..111
          Ident@109..111 "op"
      Ascii41@111..112 ")"
      Whitespace@112..113 " "
      Ascii61@113..114 "="
      Whitespace@114..115 " "
      FuncCall@115..132
        Ident@115..126 "cardinality"
        Ascii40@126..127 "("
        ColumnRef@127..132
          ValueP@127..132 "value"
  Ascii41@132..133 ")"
  Ascii41@133..134 ")"
  Ascii44@134..135 ","
  Newline@135..136 "\n"
  Newline@136..137 "\t"
  Constraint@137..181
    Check@137..142 "check"
    Whitespace@142..143 " "
    Ascii40@143..144 "("
    AExpr@144..181
      FuncCall@144..158
        Ident@144..155 "cardinality"
        Ascii40@155..156 "("
        ColumnRef@156..158
          Ident@156..158 "op"
      Ascii41@158..159 ")"
      Whitespace@159..160 " "
      Ascii61@160..161 "="
      Whitespace@161..162 " "
      FuncCall@162..181
        Ident@162..173 "cardinality"
        Ascii40@173..174 "("
        ColumnRef@174..181
          Ident@174..181 "matches"
  Ascii41@181..182 ")"
  Ascii41@182..183 ")"
  Ascii41@183..184 ")"
  Ascii59@184..185 ";"

