crates/pg_syntax/tests/snapshots/postgres_regress/brin_bloom@14.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT brin_desummarize_range('brinidx_bloom', 0);"
---
SelectStmt@0..50
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..48
    FuncCall@7..48
      Ident@7..29 "brin_desummarize_range"
      Ascii40@29..30 "("
      AConst@30..45
        Sconst@30..45 "'brinidx_bloom'"
      Ascii44@45..46 ","
      Whitespace@46..47 " "
      AConst@47..48
        Iconst@47..48 "0"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

