crates/pg_syntax/tests/snapshots/postgres_regress/brin_bloom@33.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT brin_summarize_range('brin_summarize_bloom_idx', 4294967296);"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..66
    FuncCall@7..66
      Ident@7..27 "brin_summarize_range"
      Ascii40@27..28 "("
      AConst@28..54
        Sconst@28..54 "'brin_summarize_bloom ..."
      Ascii44@54..55 ","
      Whitespace@55..56 " "
      AConst@56..66
        Fconst@56..66 "4294967296"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

